update the site

--- a/index.html
+++ b/index.html
@@ -47,15 +47,13 @@
     <p>That means anyone can download the code I used to make it.</p>
     <p>Want to download my source code? Well I made an easy way to do it.</p>
     <p>Go to the 7Zeb Download Center <a href="/downloads/index.html"><button>Go Now!</button></a> and download my source code today.</p>
-    <h2 style="color:red">AFTER YOU DOWNLOAD</h2>
-    <p>After you have downloaded the source code, delete any CSS file that you are not allowed to use (if you are publishing this site)
-    for more information, read the <a href="/tos.html">TOS</a></p>    
+    
     </section>
     <!-- Footer -->
     <footer>
         <p>© 2025 Rutwik Stuff Branding Umbrella | This website is <a href="https://www.github.io/7zeb/website">open-source*</a></p>
-        <p>Last modified on: August 21, 2025</p>
-        <p>*NewUI 3 is not open-source until NewUI 4 releases.</p>
+        <p>Last modified on: September 5, 2025</p>
+        <p>*NewUI 3 is not open-source until November 19, 2025</p>
     </footer>
     <script src="/dark.js"></script>
 </body>
