--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     <!-- Footer -->
     <footer>
         <p>© 2025 Rutwik Stuff Branding Umbrella | This website is <a href="https://www.github.io/7zeb/website">open-source*</a></p>
-        <p>Last modified on: September 5, 2025</p>
+        <p>Last modified on: September 24, 2025</p>
         <p>*NewUI 3 is not open-source until November 19, 2025</p>
     </footer>
-    <script src="/dark.js"></script>
+    <script src="/exploring/dark.js"></script>
 </body>
 </html>
