fix JS and CSS references on the list

--- a/exploring-list.html
+++ b/exploring-list.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>7Zeb - Exploring List</title>
     <link rel="icon" type="image/x-icon" href="logos/logo8.png"></head>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/exploring/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 <body>
     <!-- Navigation Bar -->
@@ -70,6 +70,6 @@
         <p>Last modified on: September 5, 2025</p>
         <p>*NewUI 3 is not open-source until November 19, 2025</p>
     </footer>
-    <script src="/dark.js"></script>
+    <script src="/exploring/dark.js"></script>
 </body>
 </html>
